Adding closed vacancy status - non functional

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/_vacancyStatus.cshtml
@@ -16,6 +16,9 @@
     case ProviderVacancyStatuses.Live:
         <span class="tag-live" style="width: 110px">Live</span>
         break;
+    case ProviderVacancyStatuses.Closed:
+        <span class="tag-live" style="width: 110px">Closed</span>
+        break;
     default:
         break;
 }
