--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -18,14 +18,13 @@
                 <div class="panel-indent">
                     <ul class="list-text">
                         <li>@Model.ApplicantDetails.Name</li>
-                        <li>Age group: 16 - 18</li>
                     </ul>
                     <ul class="list-text">
                         <li>@Model.ApplicantDetails.Address.AddressLine1</li>
                         <li>@Model.ApplicantDetails.Address.AddressLine2</li>
                         <li>@Model.ApplicantDetails.Address.AddressLine3</li>
                         <li>@Model.ApplicantDetails.Address.AddressLine4</li>
-                        <li>@Model.ApplicantDetails.Address.Postcode (@Model.ApplicantDetails.Distance.ToDistanceInMilesDisplayText() from employer location)</li>
+                        <li>@Model.ApplicantDetails.Address.Postcode</li>
                     </ul>
                     <ul class="list-text">
                         <li>@Model.ApplicantDetails.PhoneNumber</li>
@@ -37,42 +36,12 @@
             </section>
         </div>
         <div class="grid grid-1-3">
-            <a class="button" href="">Invite to interview</a>
+            <a class="button" href="">Appoint candidate</a>
             <p class="med-btm-margin">
                 <a href="">Reject candidate</a>
             </p>
         </div>
     </div>
-    <fieldset class="fieldset-with-border">
-        <legend class="heading-large">
-            Answers to employer questions
-        </legend>
-        @if (Model.Vacancy.HasQuestions)
-        {
-            if (Model.Vacancy.HasFirstQuestion)
-            {
-                <div class="form-group">
-                    <label for="add-question1" class="form-label">@Model.Vacancy.FirstQuestion</label>
-                    <span class="form-prepopped" id="add-question1">@Model.VacancyQuestionAnswers.FirstQuestionAnswer</span>
-                </div>
-            }
-            if (Model.Vacancy.HasSecondQuestion)
-            {
-                <div class="form-group">
-                    <label for="add-question2" class="form-label">@Model.Vacancy.SecondQuestion</label>
-                    <span class="form-prepopped" id="add-question2">@Model.VacancyQuestionAnswers.SecondQuestionAnswer</span>
-                </div>
-            }
-        }
-        @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus)
-        @if (Model.VacancyQuestionAnswers.HasAnythingWeCanDoToSupportYourInterviewAnswer)
-        {
-            <div class="form-group">
-                <label for="question4" class="form-label">Is there anything we can do to support your interview?</label>
-                <span class="form-prepopped" id="">@Model.VacancyQuestionAnswers.AnythingWeCanDoToSupportYourInterviewAnswer</span>
-            </div>
-        }
-    </fieldset>
     <fieldset class="fieldset-with-border">
         <legend class="heading-large">
             About you
@@ -321,5 +290,35 @@
                 </div>
             </div>
         </div>
+    </fieldset>
+    <fieldset class="fieldset-with-border">
+        <legend class="heading-large">
+            Answers to employer questions
+        </legend>
+        @if (Model.Vacancy.HasQuestions)
+        {
+            if (Model.Vacancy.HasFirstQuestion)
+            {
+                <div class="form-group">
+                    <label for="add-question1" class="form-label">@Model.Vacancy.FirstQuestion</label>
+                    <span class="form-prepopped" id="add-question1">@Model.VacancyQuestionAnswers.FirstQuestionAnswer</span>
+                </div>
+            }
+            if (Model.Vacancy.HasSecondQuestion)
+            {
+                <div class="form-group">
+                    <label for="add-question2" class="form-label">@Model.Vacancy.SecondQuestion</label>
+                    <span class="form-prepopped" id="add-question2">@Model.VacancyQuestionAnswers.SecondQuestionAnswer</span>
+                </div>
+            }
+        }
+        @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus)
+        @if (Model.VacancyQuestionAnswers.HasAnythingWeCanDoToSupportYourInterviewAnswer)
+        {
+            <div class="form-group">
+                <label for="question4" class="form-label">Is there anything we can do to support your interview?</label>
+                <span class="form-prepopped" id="">@Model.VacancyQuestionAnswers.AnythingWeCanDoToSupportYourInterviewAnswer</span>
+            </div>
+        }
     </fieldset>
 </div>
