--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -42,6 +42,7 @@
                     {
                         @Html.HiddenFor(model => model.ProviderSiteErn)
                         @Html.HiddenFor(model => model.VacancyGuid)
+                        @Html.HiddenFor(model => model.ComeFromPreview)
 
                         <div id="ern-search-panel" class="toggle-content blocklabel-content">
                             @Html.FormTextFor(model => model.Ern)
@@ -56,6 +57,7 @@
                     {
                         @Html.HiddenFor(model => model.ProviderSiteErn)
                         @Html.HiddenFor(model => model.VacancyGuid)
+                        @Html.HiddenFor(model => model.ComeFromPreview)
 
                         <div id="name-location-search-panel" class="toggle-content blocklabel-content">
                             @Html.FormTextFor(model => model.Name)
@@ -108,7 +110,7 @@
                             </td>
                             <td>@employerResultsViewModel.Ern</td>
                             <td>
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ComfirmEmployer, new {providerSiteErn = Model.ProviderSiteErn, ern = employerResultsViewModel.Ern, vacancyGuid = vacancyGuidValue })">Select employer</a>
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ConfirmEmployerSelection, new {providerSiteErn = Model.ProviderSiteErn, ern = employerResultsViewModel.Ern, vacancyGuid = vacancyGuidValue, comeFromPreview = Model.ComeFromPreview })">Select employer</a>
                             </td>
                         </tr>
                     }
@@ -117,7 +119,7 @@
             </div>
         }
 
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteErn = Model.ProviderSiteErn, vacancyGuid = Model.VacancyGuid})">Link to a new employer</a>
+        <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectNewEmployer, new {providerSiteErn = Model.ProviderSiteErn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview})">Link to a new employer</a>
     </section>
 
     <div class="page-navigation">
