--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectNewEmployer.cshtml
@@ -41,6 +41,7 @@
             @Html.HiddenFor(m => m.ProviderSiteErn)
             @Html.HiddenFor(m => m.VacancyGuid)
             @Html.Hidden("FilterType", EmployerFilterType.Ern)
+            @Html.HiddenFor(m => m.ComeFromPreview)
 
             <div id="ern-search-panel" class="toggle-content blocklabel-content">
                 @Html.FormTextFor(model => model.Ern)
@@ -48,7 +49,7 @@
                 <button id="ern-search-button" type="submit" class="button">
                     Find employer
                 </button>
-                <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer, new {providerSiteErn = Model.ProviderSiteErn})">Return to your linked employers</a>
+                <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer, new {providerSiteErn = Model.ProviderSiteErn, comeFromPreview = Model.ComeFromPreview})">Return to your linked employers</a>
             </div>
         }
 
@@ -57,6 +58,7 @@
             @Html.HiddenFor(m => m.ProviderSiteErn)
             @Html.HiddenFor(m => m.VacancyGuid)
             @Html.Hidden("FilterType", EmployerFilterType.NameAndLocation)
+            @Html.HiddenFor(m => m.ComeFromPreview)
 
             <div id="name-location-search-panel" class="toggle-content blocklabel-content">
                 @Html.FormTextFor(model => model.Name)
@@ -109,7 +111,7 @@
                             </td>
                             <td>@employerResultsViewModel.Ern</td>
                             <td>
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ComfirmNewEmployer, new {providerSiteErn = Model.ProviderSiteErn, ern = employerResultsViewModel.Ern, vacancyGuid = vacancyGuidValue})">Select employer</a>
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.ComfirmNewEmployer, new {providerSiteErn = Model.ProviderSiteErn, ern = employerResultsViewModel.Ern, vacancyGuid = vacancyGuidValue, comeFromPreview = Model.ComeFromPreview})">Select employer</a>
                             </td>
                         </tr>
                     }
