--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
@@ -19,6 +19,8 @@
         @Html.HiddenFor(m => m.ProviderSiteErn)
         @Html.HiddenFor(m => m.Employer.Ern)
         @Html.HiddenFor(m => m.VacancyGuid)
+        @Html.HiddenFor(m => m.VacancyReferenceNumber)
+        @Html.HiddenFor(m => m.ComeFromPreview)
 
         <div class="grid grid-1-2">
             <div class="inner-block-padr">
@@ -39,11 +41,37 @@
                 <p class="nojs-notice">You must have JavaScript enabled to view a map of the location</p>
             </div>
         </div>
+
+        <div class="grid grid-1-1">
+            @{Html.RenderPartial("_apprenticeshipLocationSelectorJS", Model);}
+            @{Html.RenderPartial("_apprenticeshipLocationSelectorNonJS", Model);}
+        </div>
+
         <div class="grid grid-1-1">
             @Html.FormTextFor(model => model.WebsiteUrl, controlHtmlAttributes: new { type = "text", @class = "form-control-1-1" }, labelHtmlAttributes: new { @class = "bold-small" })
             @Html.FormTextAreaFor(m => m.Description, controlHtmlAttributes: new { @class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;" }, labelHtmlAttributes: new { @class = "bold-small" })
             <button class="button">Save description and link to employer</button>
-            <a href="@Request.UrlReferrer.PathAndQuery">Choose a different employer</a>
+            @*<a href="@Request.UrlReferrer.PathAndQuery">Choose a different employer</a>*@
+            @Html.RouteLink("Choose a different employer", RecruitmentRouteNames.SelectNewEmployer, new { providerSiteErn = Model.ProviderSiteErn, ern = Model.Employer.Ern, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview })
         </div>
     }
 </div>
+
+@section scripts {
+    <script type="text/javascript">
+        var comeFromPreview = "@Model.ComeFromPreview.ToString()";
+
+        $("#NumberOfPositionsJS").attr("id", "NumberOfPositions").attr("Name", "NumberOfPositions");
+        $("#location-type-main-location").on('click', function () {
+            if (comeFromPreview === "True") {
+                $("#confirmEmployer").text("Save and return to Preview");
+            }
+        });
+
+        $("#location-type-different-location").on('click', function () {
+            $("#confirmEmployer").text("Save and continue");
+        });
+    </script>
+
+    @*Difficult to put in the partial view. See http://stackoverflow.com/questions/5981490/how-to-render-javascript-into-masterlayout-section-from-partial-view*@
+}
