--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyQuestions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyQuestions.cshtml
@@ -1,7 +1,10 @@
 ﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.VacancyQuestionsViewModel
+@using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @{
     ViewBag.Title = "Recruit an Apprentice - Enter vacancy question";
+
+    var saveButtonText = (Model.Status == ProviderVacancyStatuses.RejectedByQA || Model.ComeFromPreview) ? "Save and return to Preview" : "Save and preview vacancy";
 }
 
 <h1 class="heading-xlarge">
@@ -24,7 +27,7 @@
         </div>
     </section>
     <div class="grid grid-1-2">
-        <button type="submit" class="button" name="VacancyQuestions" value="VacancyQuestions">Save and preview vacancy</button>
+        <button type="submit" class="button" name="VacancyQuestions" value="VacancyQuestions">@saveButtonText</button>
         <button id="VacancyQuestionsAndExit" type="submit" class="button-link" name="VacancyQuestions" value="VacancyQuestionsAndExit">Save and exit</button>
     </div>
 }
