Mapping and view for application preview

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/DisplayTemplates/Application/TrainingCourses.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/DisplayTemplates/Application/TrainingCourses.cshtml
@@ -69,10 +69,10 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <span class="form-prepopped cell-span">@Html.GetMonthYearLabel(each.FromMonth, each.FromYear)</span>
+                                    <span class="form-prepopped cell-span">@QualificationPresenter.GetMonthYearLabel(each.FromMonth, each.FromYear)</span>
                                 </td>
                                 <td>
-                                    <span class="form-prepopped cell-span">@Html.GetMonthYearLabel(each.ToMonth, each.ToYear)</span>
+                                    <span class="form-prepopped cell-span">@QualificationPresenter.GetMonthYearLabel(each.ToMonth, each.ToYear)</span>
                                 </td>
                                 <td></td>
                                 <td></td>
