--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -14,26 +14,7 @@
     </div>
     <div class="grid-wrapper">
         <div class="grid grid-2-3">
-            <section class="inner-block-padr">
-                <div class="panel-indent">
-                    <ul class="list-text">
-                        <li>@Model.ApplicantDetails.Name</li>
-                    </ul>
-                    <ul class="list-text">
-                        <li>@Model.ApplicantDetails.Address.AddressLine1</li>
-                        <li>@Model.ApplicantDetails.Address.AddressLine2</li>
-                        <li>@Model.ApplicantDetails.Address.AddressLine3</li>
-                        <li>@Model.ApplicantDetails.Address.AddressLine4</li>
-                        <li>@Model.ApplicantDetails.Address.Postcode</li>
-                    </ul>
-                    <ul class="list-text">
-                        <li>@Model.ApplicantDetails.PhoneNumber</li>
-                        <li>
-                            <a href="@Model.ApplicantDetails.EmailAddress">@Model.ApplicantDetails.EmailAddress</a>
-                        </li>
-                    </ul>
-                </div>
-            </section>
+            @Html.DisplayFor(m => m.ApplicantDetails, "ApplicantDetails")
         </div>
         <div class="grid grid-1-3">
             <a class="button" href="">Appoint candidate</a>
@@ -42,258 +23,14 @@
             </p>
         </div>
     </div>
+    @Html.DisplayFor(m => m.AboutYou, "AboutYou")
+    @Html.DisplayFor(m => m.Education, "Education")
+    @Html.DisplayFor(m => m.Qualifications, "Qualifications")
+    @Html.DisplayFor(m => m.WorkExperience, "WorkExperience")
+    @Html.DisplayFor(m => m.TrainingCourses, "TrainingCourses")
     <fieldset class="fieldset-with-border">
         <legend class="heading-large">
-            About you
-        </legend>
-        <div class="form-group">
-            <label for="question1" class="form-label">Provide examples of your strengths</label>
-            <span class="form-prepopped" id="">My strengths are</span>
-        </div>
-        <div class="form-group">
-            <label for="question2" class="form-label">What skills would you like to improve?</label>
-            <span class="form-prepopped" id="">I could improve</span>
-        </div>
-        <div class="form-group">
-            <label for="question3" class="form-label">What are you hobbies and interests?</label>
-            <span class="form-prepopped" id="">My hobbies and interests are</span>
-        </div>
-    </fieldset>
-    <fieldset class="fieldset-with-border">
-        <legend class="heading-large">
-            Education
-        </legend>
-        <div class="form-group">
-            <label for="school-name" class="form-label">Name of most recent school/college</label>
-            <span class="form-prepopped" id="">St Bernards School</span>
-        </div>
-        <div class="inline-fixed">
-            <p class="form-label">Years attended</p>
-            <div class="form-group">
-                <label for="school-from" class="form-label">From</label>
-                <span class="form-prepopped" id="">2008</span>
-            </div>
-            <div class="form-group">
-                <label for="school-to" class="form-label">To</label>
-                <span class="form-prepopped" id="">2011</span>
-            </div>
-        </div>
-    </fieldset>
-    <fieldset class="fieldset-with-border">
-        <legend class="heading-large">
-            Qualifications
-        </legend>
-        <div class="qualifications-wrapper">
-            <div class="qualification-table" id="gcse">
-                <div class="hgroup-small">
-                    <h3 class="heading-small heading-qualType">GCSE</h3>
-                </div>
-                <table class="grid-3-4">
-                    <colgroup>
-                        <col class="t40">
-                        <col class="t25">
-                        <col class="t15">
-                        <col>
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th class="th-qualSubject">
-                                <span class="heading-span">Subject</span>
-                            </th>
-                            <th class="th-qualGrade">
-                                <span class="heading-span">Grade</span>
-                            </th>
-                            <th class="th-qualYear">
-                                <span class="heading-span">Year</span>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody class="tbody-qual">
-                        <tr class="tr-qualRow">
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="Maths" readonly="">
-                            </td>
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="A" readonly="">
-                            </td>
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="2011" readonly="">
-                            </td>
-                        </tr>
-                        <tr class="tr-qualRow">
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="English" readonly="">
-                            </td>
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="B" readonly="">
-                            </td>
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="2011" readonly="">
-                            </td>
-                        </tr>
-                        <tr class="tr-qualRow">
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="Science" readonly="">
-                            </td>
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="BB" readonly="">
-                            </td>
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="2011" readonly="">
-                            </td>
-                        </tr>
-                        <tr class="tr-qualRow">
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="Geography" readonly="">
-                            </td>
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="C" readonly="">
-                            </td>
-                            <td class="td-qualcell">
-                                <input class="form-control qual-input-edit form-prepopped" type="text" value="2011" readonly="">
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </fieldset>
-    <fieldset>
-        <legend class="heading-large">
-            Work experience
-        </legend>
-        <div class="work-history-wrapper grid-3-4">
-            <div class="grid-wrapper work-history-item">
-                <div class="grid grid-1-2">
-                    <table class="table-no-btm-border table-compound">
-                        <colgroup>
-                            <col class="t100">
-                            <col>
-                        </colgroup>
-                        <thead>
-                            <tr>
-                                <th>
-                                    <span class="heading-span">Work experience</span>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <span class="form-prepopped cell-span editable-work">Superdrug</span>
-                                    <span class="form-prepopped cell-span work-hyphen">-</span>
-                                    <span class="form-prepopped cell-span editable-work">Customer service</span>
-                                    <div></div>
-                                    <span class="form-prepopped cell-span editable-work">Helping customers at the checkout</span>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="grid grid-1-2">
-                    <table class="table-no-btm-border table-compound">
-                        <colgroup>
-                            <col class="t30">
-                            <col class="t30">
-                            <col class="t25">
-                            <col class="t15">
-                            <col>
-                        </colgroup>
-                        <thead>
-                            <tr>
-                                <th>
-                                    <span class="heading-span">From</span>
-                                </th>
-                                <th>
-                                    <span class="heading-span">To</span>
-                                </th>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <span class="form-prepopped cell-span editable-work">Dec 2013</span>
-                                </td>
-                                <td>
-                                    <span class="form-prepopped cell-span editable-work">Current</span>
-                                </td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="grid-wrapper work-history-item">
-                <div class="grid grid-1-2">
-                    <table class="table-no-btm-border table-compound">
-                        <colgroup>
-                            <col class="t100">
-                            <col>
-                        </colgroup>
-                        <thead>
-                            <tr>
-                                <th>
-                                    <span class="heading-span">Work experience</span>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <span class="form-prepopped cell-span editable-work">Boots</span>
-                                    <span class="form-prepopped cell-span work-hyphen">-</span>
-                                    <span class="form-prepopped cell-span editable-work">Customer service</span>
-                                    <div></div>
-                                    <span class="form-prepopped cell-span editable-work">Helped customers at the checkout</span>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="grid grid-1-2">
-                    <table class="table-no-btm-border table-compound">
-                        <colgroup>
-                            <col class="t30">
-                            <col class="t30">
-                            <col class="t25">
-                            <col class="t15">
-                            <col>
-                        </colgroup>
-                        <thead>
-                            <tr>
-                                <th>
-                                    <span class="heading-span">From</span>
-                                </th>
-                                <th>
-                                    <span class="heading-span">To</span>
-                                </th>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <span class="form-prepopped cell-span editable-work">May 2012</span>
-                                </td>
-                                <td>
-                                    <span class="form-prepopped cell-span editable-work">Sept 2013</span>
-                                </td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </fieldset>
-    <fieldset class="fieldset-with-border">
-        <legend class="heading-large">
-            Answers to employer questions
+            Answers to employer questionss
         </legend>
         @if (Model.Vacancy.HasQuestions)
         {
